Изменил структуру данных, удалил таблицу дружбы.